fixed blur issue on mobile

--- a/css/cj_css.css
+++ b/css/cj_css.css
@@ -809,8 +809,6 @@
         position:relative;
           width:100%;
           height:100%;
-          filter: blur(5px);
-      -webkit-filter: blur(5px);
       }
       
       #votinginfo{
